<resources>
    <plurals name="already_n_recordings_scheduled">
        <item quantity="one">There is already %1$d recording scheduled during %2$s. Specifically: </item>
        <item quantity="other">There are already %1$d recordings scheduled during %2$s. Specifically: </item>
    </plurals>

    <string name="app_name" translatable="false">HiVo</string>
    <string name="no_recording_found">No recording found…</string>
    <string name="stop_recording">Stop recording</string>
    <string name="start_recording">Start recording</string>
    <string name="save">Save</string>
    <string name="title_activity_settings">Settings</string>
    <string name="recording_name_format">Recording name format</string>
    <string name="settings">Settings</string>
    <string name="scheduled_recordings">Scheduled Recordings</string>
    <string name="past_recordings">Past Recordings</string>
    <string name="help">Help</string>
    <string name="support">Support</string>
    <string name="send_feedback">Send feedback</string>
    <string name="report_issues">Report technical issues or suggest new features</string>
    <string name="buffer">Maximum time to record</string>
    <string name="save_recording">Save recording</string>
    <string name="cancel">Cancel</string>
    <string name="enter_a_recording_name">Enter a recording name…</string>
    <string name="hivo_recordings">HiVo recordings</string>
    <string name="error_1">Error 1: Can\'t retrieve filename options.</string>
    <string name="specify_on_save">Specify on save</string>
    <string name="play_pause_button">play/pause button</string>
    <string name="saving">Saving…</string>
    <string name="saved">Saved.</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_recording">Schedule recording</string>
    <string name="you_have_to_grant_permissions">You will have to grant permissions to be able to record.</string>
    <string name="scheduling">Scheduling %1$s…</string>
    <string name="scheduled">Scheduled %1$s.</string>
    <string name="no_title">(no title)</string>
    <string name="start_time_not_after_end_time">Start time cannot be after the end time.</string>
    <string name="ok">OK</string>
    <string name="already_recording_with_name">There is already a recording with that name</string>
    <string name="save_as_instead">Do you want to save it as %1$s instead?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="recording_must_start_in_future">The recording must start in the future</string>
    <string name="button_undo">undo</string>
    <string name="hivo_recording">HiVo Recording</string>
    <string name="hivo_recording_in_bg">HiVo is recording in the background 🎤</string>
    <string name="tap_to_open">Tap to open it</string>
    <string name="saving_failed">Saving failed</string>
    <string name="recording_started">Recording started.</string>
    <string name="recording_stopped">Recording stopped.</string>
    <string name="onboarding_title1">Welcome to HiVo!</string>
    <string name="onboarding_message1">HiVo listens in the background. If something interesting happens, you can then save the audio.</string>
    <string name="onboarding_title2">Schedule Recordings</string>
    <string name="onboarding_message2">You can schedule HiVo to automatically record at a certain time.</string>
    <string name="onboarding_title3">Ready to go?</string>
    <string name="onboarding_messsage3">To start listening, just turn on the switch!</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="start_and_end_must_be_valid">The start must be between %1s and the end, and the end must be between the start and %2s.</string>
    <string name="recordings_must_be_less_than_6_hrs">Recording must be shorter than 6 hours, for technical reasons.</string>
</resources>
