<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:defaultValue="60"
        app:entries="@array/buffer_entries"
        app:entryValues="@array/buffer_values"
        app:key="buffer"
        app:title="@string/buffer"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:key="filename"
        app:title="@string/recording_name_format"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory
        app:key="support"
        app:title="@string/support">

        <Preference
            app:icon="@drawable/baseline_email_24"
            app:key="feedback"
            app:summary="@string/report_issues"
            app:title="@string/send_feedback" />

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
