<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
            android:text="@string/start_recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startRecordingButton"/>

    <Button
            android:text="@string/stop_recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stopRecordingButton"/>

    <Button
            android:text="@string/play_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playPauseButton"/>

    <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"/>
</LinearLayout>
